# go-mcp-regexp-replace

./: .gitignore  .golangci.yml  README.md  go.mod  go.sum  replace.go
cmd/mcp-regexp-replace/: main.go
engine/rs/rs-regexp-replace-wasi/: Cargo.toml  rs-regexp-replace-wasi.wasm
engine/rs/rs-regexp-replace-wasi/src/: main.rs
replacer/wasi/: wasi_replacer.go
replacer/wasi/wa0/: replex.go
